--- a/test/run.html
+++ b/test/run.html
@@ -17,17 +17,12 @@
 		//list of models to load and render for testing
 		var aModels = [
 			'models/four2three.jscad',
-			// 'models/couplerdemo.jscad',
-			//'models/gearsdemo.jscad',
-			// 'models/grilledemo.jscad',
-			//'models/hookdemo.jscad',
-			//'models/lampshadedemo.jscad',
-			//'models/servodemo.jscad',
 			'models/vector2d.jscad',
 			'models/vector3d.jscad',
 			'models/vertex.jscad',
 			'models/solids.jscad',
 			'models/polygon.jscad',
+			'models/plane.jscad',
 			''//dummy
 		];
 
