--- a/test/run.html
+++ b/test/run.html
@@ -23,6 +23,7 @@
 			'models/solids.jscad',
 			'models/polygon.jscad',
 			'models/plane.jscad',
+			'models/orthobasis.jscad',
 			''//dummy
 		];
 
