--- a/test/run.html
+++ b/test/run.html
@@ -24,6 +24,7 @@
 			'models/polygon.jscad',
 			'models/plane.jscad',
 			'models/orthobasis.jscad',
+			'models/path2d.jscad',
 			''//dummy
 		];
 
