--- a/test/run.html
+++ b/test/run.html
@@ -25,6 +25,7 @@
 			'models/plane.jscad',
 			'models/orthobasis.jscad',
 			'models/path2d.jscad',
+			'models/options.jscad',
 			''//dummy
 		];
 
