--- a/test/run.html
+++ b/test/run.html
@@ -26,6 +26,7 @@
 			'models/orthobasis.jscad',
 			'models/path2d.jscad',
 			'models/options.jscad',
+			'models/matrix4x4.jscad',
 			''//dummy
 		];
 
