--- a/test/run.html
+++ b/test/run.html
@@ -27,6 +27,7 @@
 			'models/path2d.jscad',
 			'models/options.jscad',
 			'models/matrix4x4.jscad',
+			'models/line3d.jscad',
 			''//dummy
 		];
 
