--- a/test/run.html
+++ b/test/run.html
@@ -28,6 +28,7 @@
 			'models/options.jscad',
 			'models/matrix4x4.jscad',
 			'models/line3d.jscad',
+			'models/line2d.jscad',
 			''//dummy
 		];
 
