--- a/test/run.html
+++ b/test/run.html
@@ -17,6 +17,7 @@
 		//list of models to load and render for testing
 		var aModels = [
 			'models/four2three.jscad',
+			'models/servodemo.jscad',
 			'models/vector2d.jscad',
 			'models/vector3d.jscad',
 			'models/vertex.jscad',
@@ -29,6 +30,7 @@
 			'models/matrix4x4.jscad',
 			'models/line3d.jscad',
 			'models/line2d.jscad',
+			'models/csg-base.jscad',
 			''//dummy
 		];
 
