cag.vertex.side 100%

--- a/test/run.html
+++ b/test/run.html
@@ -31,6 +31,7 @@
 			'models/line3d.jscad',
 			'models/line2d.jscad',
 			'models/csg-base.jscad',
+			'models/cag-vertex.jscad',
 			''//dummy
 		];
 
